--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "ore-cli"
+name = "ore-cli2"
 version = "0.4.12-alpha"
 description = "A command line interface for the Ore program."
 license = "Apache-2.0"
 edition = "2021"
 
 [[bin]]
-name = "ore"
+name = "ore-cli2"
 path = "src/main.rs"
 
 [features]
@@ -31,3 +31,4 @@ solana-transaction-status = "^1.16"
 spl-token = { version = "^4", features = ["no-entrypoint"] }
 spl-associated-token-account = { version = "^2.2", features = [ "no-entrypoint" ] }
 tokio = "1.35.1"
+rustacuda = "0.1.3"
